[metadata]
name = rock
summary = OpenStack Instance HA
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    rock
extra_files =
    requirements.txt
data_files =
    /etc/rock = etc/*
    /usr/bin = commands/*
    /usr/lib/systemd/system = service/systemd/*
    /usr/local/bin = service/script/*
    /usr/local/bin = service/db_clear/*

[entry_points]
console_scripts =
    rock-mon = rock.monitor:main
    rock-engine = rock.rock_engine:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = rock/locale
domain = rock

[update_catalog]
domain = rock
output_dir = rock/locale
input_file = rock/locale/rock.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = rock/locale/rock.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

